Exception handling enchanced

--- a/AdvancedSeleniumPracticeYahooAutomation/src/main/resources/qa.properties
+++ b/AdvancedSeleniumPracticeYahooAutomation/src/main/resources/qa.properties
@@ -8,4 +8,5 @@ user.email_text=Draft 1 here
 url.login_page=https://www.yahoo.com/
 url.account_page=https://login.yahoo.com/myaccount/overview/?src=ym&.done=https%3A%2F%2Fmail.yahoo.com%2F&pspid=159608517&activity=ybar-acctinfo&.scrumb=2ePeeNL%2FjRy
 url.mail_page=https://mail.yahoo.com/d/folders/1
+url.yahoo_page=https://www.yahoo.com/
 
