--- a/AdvancedSeleniumPracticeYahooAutomation/pom.xml
+++ b/AdvancedSeleniumPracticeYahooAutomation/pom.xml
@@ -20,6 +20,7 @@
             <version>4.27.0</version>
         </dependency>
 
+
         <dependency>
             <groupId>io.github.bonigarcia</groupId>
             <artifactId>webdrivermanager</artifactId>
@@ -56,6 +57,23 @@
             <artifactId>log4j-core</artifactId>
             <version>2.20.0</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.codeborne/selenide -->
+<!--        <dependency>-->
+<!--            <groupId>com.codeborne</groupId>-->
+<!--            <artifactId>selenide</artifactId>-->
+<!--            <version>7.6.1</version>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>com.codeborne</groupId>-->
+<!--            <artifactId>selenide-core</artifactId>-->
+<!--            <version>7.6.1</version>-->
+<!--        </dependency>-->
+
+
+
+
+
     </dependencies>
+
 
 </project>
